doc/2.12/_sources/reference/generated/ak.where.rst.txt
ak.where
========

Defined in `awkward.operations.ak_where <https://github.com/scikit-hep/awkward/blob/e8ade13f5a98a83c87023d381a827eb9b92c9a56/src/awkward/operations/ak_where.py>`__ on `line 20 <https://github.com/scikit-hep/awkward/blob/e8ade13f5a98a83c87023d381a827eb9b92c9a56/src/awkward/operations/ak_where.py#L20>`__.

.. py:function:: ak.where(condition, *args, mergebool=True, highlevel=True, behavior=None, attrs=None)

   Selects elements from ``x`` or ``y`` by a condition, or finds where it is True.

   This function has a one-argument form, ``condition`` without ``x`` or ``y``, and
   a three-argument form, ``condition``, ``x``, and ``y``. In the one-argument form,
   it is completely equivalent to NumPy's
   `nonzero <https://docs.scipy.org/doc/numpy/reference/generated/numpy.nonzero.html>`__
   function.

   In the three-argument form, it acts as a vectorized ternary operator:
   ``condition``, ``x``, and ``y`` must all have the same length and::

       output[i] = x[i] if condition[i] else y[i]

   for all ``i``. The structure of ``x`` and ``y`` do not need to be the same; if
   they are incompatible types, the output will have :py:obj:`ak.type.UnionType`.

   :param condition: Array-like data (anything :py:obj:`ak.to_layout` recognizes) of booleans.
   :param x: Optional array-like data (anything :py:obj:`ak.to_layout` recognizes) with the same
             length as ``condition``.
   :param y: Optional array-like data (anything :py:obj:`ak.to_layout` recognizes) with the same
             length as ``condition``.
   :param mergebool: If True, boolean and numeric data
                     can be combined into the same buffer, losing information about
                     False vs ``0`` and True vs ``1``; otherwise, they are kept in separate
                     buffers with distinct types (using an :py:obj:`ak.contents.UnionArray`).
   :type mergebool: bool, default is True
   :param highlevel: If True, return an :py:obj:`ak.Array`;
                     otherwise, return a low-level :py:obj:`ak.contents.Content` subclass.
   :type highlevel: bool, default is True
   :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                    high-level.
   :type behavior: None or dict
   :param attrs: Custom attributes for the output array, if
                 high-level.
   :type attrs: None or dict

   :returns: An array with elements taken from ``x`` where ``condition`` is true and from ``y``
             otherwise (three-argument form), or the integer indices where ``condition`` is
             true (one-argument form).

